fixing image display on large screens

--- a/buy/index.html
+++ b/buy/index.html
@@ -58,7 +58,7 @@ title: iDive - To the depths
 		
 		<div id="container">
 	
- 			<div id="main">
+ 			<div id="main" class="main-image">
  			
  				{% include top.html %}
  			
